FIX responsive image sizing (pthumb placeholders are only substituted all at the end and therefore need to be unique)

--- a/_data/chunks/elr-footer.html
+++ b/_data/chunks/elr-footer.html
@@ -35,15 +35,15 @@ properties: 'a:0:{}'
         </div>
         <div class="elr-footer__col elr-footer__col--map">
             <div class="elr-footer__locations">
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=100&f=webp` &toPlaceholder=`img-100`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=300&f=webp` &toPlaceholder=`img-300`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=500&f=webp` &toPlaceholder=`img-500`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=750&f=webp` &toPlaceholder=`img-750`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=1000&f=webp` &toPlaceholder=`img-1000`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=1500&f=webp` &toPlaceholder=`img-1500`]]
-                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=2500&f=webp` &toPlaceholder=`img-2500`]]
-                <img srcset="[[+img-100]] [[+img-100.width]]w, [[+img-300]] [[+img-300.width]]w, [[+img-500]] [[+img-500.width]]w, [[+img-750]] [[+img-750.width]]w, [[+img-1000]] [[+img-1000.width]]w, [[+img-1500]] [[+img-1500.width]]w, [[+img-2500]] [[+img-2500.width]]w" sizes="(min-width: 1400px) 330px, 25vw" src="[[++fred.theme.euler.theme_dir]]brand/map-germany.png" alt="World Map with Focus on Europe" class="elr-footer__map elr-footer__map--white">
-                <img srcset="[[+img-100]] [[+img-100.width]]w, [[+img-300]] [[+img-300.width]]w, [[+img-500]] [[+img-500.width]]w, [[+img-750]] [[+img-750.width]]w, [[+img-1000]] [[+img-1000.width]]w, [[+img-1500]] [[+img-1500.width]]w, [[+img-2500]] [[+img-2500.width]]w" sizes="(min-width: 1400px) 330px, 25vw" src="[[++fred.theme.euler.theme_dir]]brand/map-germany.png" alt="World Map with Focus on Europe" class="elr-footer__map elr-footer__map--black">
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=100&f=webp` &toPlaceholder=`img-100-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=300&f=webp` &toPlaceholder=`img-300-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=500&f=webp` &toPlaceholder=`img-500-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=750&f=webp` &toPlaceholder=`img-750-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=1000&f=webp` &toPlaceholder=`img-1000-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=1500&f=webp` &toPlaceholder=`img-1500-footer-map`]]
+                [[pthumb? &input=`[[++fred.theme.euler.theme_dir]]brand/map-germany.png` &options=`w=2500&f=webp` &toPlaceholder=`img-2500-footer-map`]]
+                <img srcset="[[+img-100-footer-map]] [[+img-100-footer-map.width]]w, [[+img-300-footer-map]] [[+img-300-footer-map.width]]w, [[+img-500-footer-map]] [[+img-500-footer-map.width]]w, [[+img-750-footer-map]] [[+img-750-footer-map.width]]w, [[+img-1000-footer-map]] [[+img-1000-footer-map.width]]w, [[+img-1500-footer-map]] [[+img-1500-footer-map.width]]w, [[+img-2500-footer-map]] [[+img-2500-footer-map.width]]w" sizes="(min-width: 1400px) 330px, 25vw" src="[[++fred.theme.euler.theme_dir]]brand/map-germany.png" alt="World Map with Focus on Europe" class="elr-footer__map elr-footer__map--white">
+                <img srcset="[[+img-100-footer-map]] [[+img-100-footer-map.width]]w, [[+img-300-footer-map]] [[+img-300-footer-map.width]]w, [[+img-500-footer-map]] [[+img-500-footer-map.width]]w, [[+img-750-footer-map]] [[+img-750-footer-map.width]]w, [[+img-1000-footer-map]] [[+img-1000-footer-map.width]]w, [[+img-1500-footer-map]] [[+img-1500-footer-map.width]]w, [[+img-2500-footer-map]] [[+img-2500-footer-map.width]]w" sizes="(min-width: 1400px) 330px, 25vw" src="[[++fred.theme.euler.theme_dir]]brand/map-germany.png" alt="World Map with Focus on Europe" class="elr-footer__map elr-footer__map--black">
                 <p class="elr-footer__cities">
                     Mitten in Deutschland
                 </p>
