FIX delimiters on the front end

--- a/_data/chunks/elr-header.html
+++ b/_data/chunks/elr-header.html
@@ -154,11 +154,11 @@ properties: 'a:0:{}'
                                     </tr>
                                     <tr>
                                         <th scope="row">Branche</th>
-                                        <td>[[*elr_meta_industry]]</td>
+                                        <td>[[*elr_meta_industry:elrFormatCsv]]</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">Kompetenzfeld</th>
-                                        <td>[[*elr_meta_expertise]]</td>
+                                        <td>[[*elr_meta_expertise:elrFormatCsv]]</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">URL</th>
