--- a/_data/chunks/elr-sitemap.html
+++ b/_data/chunks/elr-sitemap.html
@@ -9,7 +9,7 @@ properties: 'a:0:{}'
 
 [[!pdoSitemap?
     &context=`web`
-    &resources=`-[[*id]],-[[++site_unavailable_page]],-[[++fred.theme.euler.id_info]]`
+    &resources=`-[[*id]][[++site_unavailable_page:isnot=`0`:then=`,-[[++site_unavailable_page]]`]],-[[++fred.theme.euler.id_info]]`
     &parents=`-[[++fred.theme.euler.id_feeds]]`
     &depth=`0`
     &sortby=`parent`
