FIX turn off sitemap cache

--- a/_data/chunks/elr-sitemap.html
+++ b/_data/chunks/elr-sitemap.html
@@ -8,6 +8,7 @@ properties: 'a:0:{}'
 -----
 
 [[!pdoSitemap?
+    &cache=`0`
     &context=`web`
     &resources=`-[[*id]][[++site_unavailable_page:isnot=`0`:then=`,-[[++site_unavailable_page]]`]],-[[++fred.theme.euler.id_info]]`
     &parents=`-[[++fred.theme.euler.id_feeds]]`
