--- a/_data/chunks/elr-tpl-head-alternate-item.html
+++ b/_data/chunks/elr-tpl-head-alternate-item.html
@@ -7,4 +7,4 @@ properties: 'a:0:{}'
 
 -----
 
-<link rel="alternate" type="[[elrGetMimeType?&contentType=`[[+content_type]]`]]" title="[[pdoField? &id=`[[+id]]` &field=`pagetitle`]]" href="[[~[[+id]]? &scheme=`https`]]">
+<link rel="alternate" type="[[elrGetMimeType?&contentType=`[[+content_type]]`]]" title="[[pdoField:htmlentities? &id=`[[+id]]` &field=`pagetitle`]]" href="[[~[[+id]]? &scheme=`https`]]">
