--- a/_data/chunks/elr-tpl-rssfeed-item.html
+++ b/_data/chunks/elr-tpl-rssfeed-item.html
@@ -8,7 +8,7 @@ properties: 'a:0:{}'
 -----
 
 <item>
-    <title>[[+longtitle]]</title>
+    <title>[[+longtitle:htmlentities]]</title>
     <description><![CDATA[
         <h2>[[+tv.elr_subtitle]]</h2>
         <figure>
@@ -22,7 +22,7 @@ properties: 'a:0:{}'
         </p>
     ]]></description>
     [[+tv.elr_meta_associatedperson
-        :notempty=`<author>[[pdoField?&id=`[[+tv.elr_meta_associatedperson]]`&field=`longtitle`]]</author>`
+        :notempty=`<author>[[pdoField:htmlentities?&id=`[[+tv.elr_meta_associatedperson]]`&field=`longtitle`]]</author>`
     ]]
     <link>[[~[[+id]]? &scheme=`https`]]</link>
     <guid isPermaLink="false">[[++http_host]]/index.php?id=[[+id]]</guid>
