FIX RSS Feed validation/encoding issues

--- a/_data/chunks/elr-rssfeed.html
+++ b/_data/chunks/elr-rssfeed.html
@@ -14,17 +14,6 @@ properties: 'a:0:{}'
     &sortby=`publishedon`
     &sortdir=`DESC`
     &includeTVs=`elr_og_image,elr_og_image_alt,elr_subtitle,elr_meta_associatedperson`
-    &tplWrapper=`@INLINE <?xml version="1.0" encoding="UTF-8" ?>
-<rss version="2.0">
-<channel>
-    <title>[[*pagetitle:htmlentities]]</title>
-    <description>[[*description:htmlentities]]</description>
-    <link>[[~[[+parents]]? &scheme=`https`]]</link>
-    <copyright>(c) [[++site_name:htmlentities]]</copyright>
-    
-    [[+output]]
-
-</channel>
-</rss>`
+    &tplWrapper=`elr_tpl_rssfeed`
     &tpl=`elr_tpl_rssfeed_item`
 ]]
