--- a/_data/chunks/elr-tpl-rssfeed-item.html
+++ b/_data/chunks/elr-tpl-rssfeed-item.html
@@ -8,7 +8,7 @@ properties: 'a:0:{}'
 -----
 
 <item>
-    <title>[[+longtitle:htmlentities]]</title>
+    <title>[[+longtitle:cdata]]</title>
     <description><![CDATA[
         <h2>[[+tv.elr_subtitle]]</h2>
         <figure>
@@ -26,5 +26,5 @@ properties: 'a:0:{}'
     ]]
     <link>[[~[[+id]]? &scheme=`https`]]</link>
     <guid isPermaLink="false">[[++http_host]]/index.php?id=[[+id]]</guid>
-    <pubDate>[[+publishedon:date=`%a, %d %b %Y %H:%M:%S %Z`]]</pubDate>
+    <pubDate>[[+publishedon:date=`%a, %d %b %Y %H:%M:%S %z`]]</pubDate>
 </item>
