FIX removed default BCC mail address from contact form

--- a/_data/fred_elements/12.html
+++ b/_data/fred_elements/12.html
@@ -5,7 +5,7 @@ description: 'Contact Form'
 image: 'https://placehold.co/300x150?text=Form+Contact'
 category: 3
 rank: 5
-options_override: '{"remote":true,"settings":[{"name":"emailBCC","label":"eMail BCC (comma-separated; no spaces)","type":"text","value":"[[++mail_smtp_user]]"},{"name":"emailReplyTo","label":"eMail Reply To (only one address)","type":"text","value":""}]}'
+options_override: '{"remote":true,"settings":[{"name":"emailBCC","label":"eMail BCC (comma-separated; no spaces)","type":"text","value":""},{"name":"emailReplyTo","label":"eMail Reply To (only one address)","type":"text","value":""}]}'
 
 -----
 
