--- a/_data/fred_elements/12.html
+++ b/_data/fred_elements/12.html
@@ -25,6 +25,7 @@ options_override: '{"remote":true,"settings":[{"name":"emailBCC","label":"eMail 
         first-name:required,
         last-name:required,
         email:email:required,
+        company:required,
         subject:required,
         message:required,
         terms-storage-acknowledged:required,`
@@ -57,8 +58,8 @@ options_override: '{"remote":true,"settings":[{"name":"emailBCC","label":"eMail 
     		<label class="form-label" for="email">eMail*<span class="invalid-feedback d-block">[[!+fi.error.email]]</span></label>
 	    </div>
 	    <div class="form-group col-md-6">
-    		<input class="form-control" type="text" id="company" name="company" placeholder="" value="[[!+fi.email]]">
-    		<label class="form-label" for="email">Firma/Idee*<span class="invalid-feedback d-block">[[!+fi.error.email]]</span></label>
+    		<input class="form-control" type="text" id="company" name="company" placeholder="" value="[[!+fi.company]]">
+    		<label class="form-label" for="company">Firma/Idee*<span class="invalid-feedback d-block">[[!+fi.error.company]]</span></label>
 	    </div>
 	</div>
 	<div class="form-group">
