ADD custom head system setting (eg. for google site verification)

--- a/_data/chunks/elr-head.html
+++ b/_data/chunks/elr-head.html
@@ -27,7 +27,8 @@ properties: 'a:0:{}'
 <!-- Twitter meta tags -->
 <meta name="twitter:card" content="summary_large_image">
 
-<meta name="google-site-verification" content="">
+[[++fred.theme.euler.head_custom]]
+
 <title>[[*pagetitle:htmlentities]] | [[++site_name:htmlentities]]</title>
 <link rel="stylesheet" href="[[++fred.theme.euler.theme_dir]]css/main.css?v=2.0.0-alpha.16">
 <link rel="stylesheet" href="[[++fred.theme.euler.theme_dir]]css/fred.css">
