FIX canonical URLs in head (correct domain)

--- a/_data/chunks/elr-head.html
+++ b/_data/chunks/elr-head.html
@@ -8,7 +8,7 @@ properties: 'a:0:{}'
 -----
 
 <meta charset="[[++modx_charset]]">
-<link rel="canonical" href="[[*id:is=`[[++site_start]]`:then=`[[++site_url]]`:else=`[[~[[*id]]? &scheme=`full`]]`]]">
+<link rel="canonical" href="[[*id:is=`[[++site_start]]`:then=`[[++site_url]]`:else=`[[~[[*id]]? &scheme=`https`]]`]]">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-snippet:-1">
 <meta name="description" content="[[*description]]">
@@ -19,7 +19,7 @@ properties: 'a:0:{}'
 <!-- Open Graph meta tags -->
 <meta property="og:title" content="[[*pagetitle]] – [[*longtitle]]">
 <meta property="og:type" content="website">
-<meta property="og:url" content="[[*id:is=`[[++site_start]]`:then=`[[++site_url]]`:else=`[[~[[*id]]? &scheme=`full`]]`]]">
+<meta property="og:url" content="[[*id:is=`[[++site_start]]`:then=`[[++site_url]]`:else=`[[~[[*id]]? &scheme=`https`]]`]]">
 <meta property="og:image" content="https://[[++http_host]][[pthumb? &input=`[[*elr_og_image]]` &options=`w=1500&h=940&zc=1&f=jpg`]]">
 <meta property="og:image:alt" content="[[*elr_og_image_alt]]">
 <meta property="og:description" content="[[*description]]">
